Added skeleton plug-in framework to support compile-time extensibility